--- a/index.html
+++ b/index.html
@@ -1,2 +1,382 @@
-<h2>Hellow There <2>
+<!DOCTYPE html>
+<html>
 
+<head>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <link rel="stylesheet" href="css/main.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Education</title>
+</head>
+
+<body id="home" class="scrollspy">
+    <!-- Navbar -->
+    <div class="navbar-fixed">
+        <nav class="blue-grey darken-3">
+            <div class="container">
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo">AL DOLLAR</a>
+                    <a href="#" data-target="mobile-nav" class="sidenav-trigger">
+                        <i class="material-icons">menu</i>
+                    </a>
+                    <ul class="right hide-on-med-and-down">
+                        <li>
+                            <a href="#search">About US</a>
+                        </li>
+
+                        <li>
+                            <a href="#gallery">Professional Courses</a>
+                        </li>
+                        <li>
+                            <a href="#popular">Consultancy</a>
+                        </li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <ul class="sidenav  blue-grey lighten-5" id="mobile-nav">
+        <li>
+            <a href="#search">About US</a>
+        </li>
+        <li>
+            <a href="#popular">professional development courses</a>
+        </li>
+        <li>
+            <a href="#gallery">Consultancy</a>
+        </li>
+        <li>
+            <a href="#contact">Contact</a>
+        </li>
+    </ul>
+    <!-- Section: Slider -->
+    <section class="slider">
+
+        <ul class="slides">
+            <li>
+                <img src="img/1.jpg">
+                <!-- random image -->
+                <div class="caption center-align">
+                    <h2>EUROPE’S EDUCATION PARTNER'S</h2>
+                    <h5 class="light grey-text text-lighten-3">The ‘TIME’ we spent in school, is the most important and formative time of ‘OUR LIFE’. During School time, we make unforgettable experiences and that influences and determines the ‘PERSON’ that we are likely to become in our professional
+                        career. We from ‘VIBRANT EUROPE’ from EUROPE, travels with you in your valuable period of life, the EUROPEAN Education System from both public and private schools, offers a great opportunity, ‘TO MAKE THE VERY BEST OUT OF YOU’!.
+                    </h5>
+                </div>
+            </li>
+            <li>
+                <img src="img/4.jpg">
+                <!-- random image -->
+                <div class="caption left-align">
+                    <h2>CONNECTING CULTURES THROUGH KNOWLEDGE
+                    </h2>
+                    <h5 class="light grey-text text-lighten-3">Located in WARSAW, POLAND , VIBRANT EUROPE OU, is a professional consultancy, which ascertain to provide educational consulting service for excellent Indian students who intend to be educated in Estonia, Germany, Poland, Finland, Norway,
+                        Italy, Denmark, Switzerland, Holland and other EU Countries
+
+                    </h5>
+                </div>
+            </li>
+            <li>
+                <img src="img/3.jpg">
+                <!-- random image -->
+                <div class="caption right-align">
+                    <h2>SERVICES AFTER LANDING IN EUROPE
+                    </h2>
+                    <h5 class="light grey-text text-lighten-3">We'll help you get a Polish citizenship, residency and work permit. We charge a nominal service charge to check your eligibility, so it will cost you nothing to take the first step in the process.</h5>
+                </div>
+            </li>
+            <li>
+                <img src="img/5.jpg">
+                <!-- random image -->
+                <div class="caption center-align">
+                    <h2>POLAND RESIDENCY PERMIT</h2>
+                    <h5 class="light grey-text text-lighten-3">We're regular people, each of us extraordinary in their own way, just like you! We have our passions and we make a point of following our dreams - that's why we understand the importance of your dreams and goals. It is our strong belief
+                        that people should get to decide freely where to live and where to work. This is the main motivation behind our legal firm helping our clients, since 2006, to reach their life goals in Poland and other EU countries.
+                    </h5>
+                </div>
+            </li>
+        </ul>
+
+
+    </section>
+    <!-- Section: Search -->
+    <section id="search" class="section section-search blue-grey lighten-2 white-text center scrollspy">
+        <div class="container">
+            <div class="row">
+                <div class="col s12">
+                    <h3>Find a Course</h3>
+                    <div class="input-field">
+                        <input type="text" class="white grey-text autocomplete" id="autocomplete-input" placeholder="Art, Engineering, Webdevelopment, etc... ">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- Section: Univercity cards -->
+    <section class="section section-icons blue-grey darken-2 center">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m4">
+                    <div class="card-panel">
+                        <i class="material-icons large blue-grey-text">school</i>
+                        <h3>Educational Consultancy</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque laboriosam itaque voluptate.</p>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card-panel">
+                        <i class="material-icons large blue-grey-text">access_time</i>
+                        <h3>UNIVERSITY SEARCH</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque laboriosam itaque voluptate.</p>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card-panel">
+                        <i class="material-icons large blue-grey-text">language</i>
+                        <h3>WORLDWIDE LOCATIONS</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque laboriosam itaque voluptate.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Video Container -->
+    <section class="section blue-grey darken-2 center">
+        <div class="container">
+            <div class="col s12 m4">
+                <div class="card-panel hoverable">
+                    <div class="video-container">
+
+                        <iframe width="853" height="480" src="https://www.youtube.com/embed/Bfdg35vZqFk" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m4">
+                <div class="card-panel hoverable">
+                    <div class="video-container">
+
+                        <iframe width="853" height="480" src="https://www.youtube.com/embed/89NyNhWW1RQ" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m4">
+                <div class="card-panel hoverable">
+                    <div class="video-container">
+
+                        <iframe width="853" height="480" src="https://www.youtube.com/embed/cfWkQDO3WkQ" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- Section: Image cards -->
+    <section id="popular" class="section section-popular scrollspy">
+        <div class="container">
+            <div class="row">
+                <h4 class="center"><span class="teal-text">Pick one option,</span> or both:</h4>
+                <div class="col s12 m4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/s1.jpg" alt="" srcset="">
+                            <span class="card-title">Polish citizenship and Polish
+                                passport</span>
+                        </div>
+                        <div class="card-content">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos eveniet repudiandae voluptates.
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/s2.jpg" alt="" srcset="">
+                            <span class="card-title">Life, work and business in
+                                Poland</span>
+                        </div>
+                        <div class="card-content">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos eveniet repudiandae voluptates.
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/s3.jpg" alt="" srcset="">
+                            <span class="card-title">Invest in Education</span>
+                        </div>
+                        <div class="card-content">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos eveniet repudiandae voluptates.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section: Follow us -->
+    <section class="section section-follow blue-grey darken-3 white-text center">
+        <div class="container">
+            <div class="row">
+                <div class="col s12">
+                    <h4>Follow University</h4>
+                    <p>Follow social media with us now.</p>
+                    <a href="#" class="white-text">
+                        <i class="fab fa-facebook fa-4x"></i>
+                    </a>
+                    <a href="#" class="white-text">
+                        <i class="fab fa-twitter fa-4x"></i>
+                    </a>
+                    <a href="#" class="white-text">
+                        <i class="fab fa-linkedin fa-4x"></i>
+                    </a>
+                    <a href="#" class="white-text">
+                        <i class="fab fa-deviantart fa-4x"></i>
+                    </a>
+                    <a href="#" class="white-text">
+                        <i class="fab fa-pinterest fa-4x"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section: Gallery -->
+    <section id="gallery" class="section section-gallery scrollspy">
+        <div class="container">
+            <h4 class="center">
+                <span class="teal-text">Professional development</span> courses
+            </h4>
+            <div class="row">
+                <div class="col s12 m3">
+                    <img src="img/6.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+                <div class="col s12 m3">
+                    <img src="img/7.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+                <div class="col s12 m3">
+                    <img src="img/8.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+                <div class="col s12 m3">
+                    <img src="img/9.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m3">
+                    <img src="img/10.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+                <div class="col s12 m3">
+                    <img src="img/11.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+                <div class="col s12 m3">
+                    <img src="img/12.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+                <div class="col s12 m3">
+                    <img src="img/13.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m3">
+                    <img src="img/14.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+                <div class="col s12 m3">
+                    <img src="img/15.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+                <div class="col s12 m3">
+                    <img src="img/3.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+                <div class="col s12 m3">
+                    <img src="img/4.jpg" alt="" class="materialboxed responsive-img">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section: Contact -->
+    <section id="contact" class="section section-contact scrollspy">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="card-panel blue-grey darken-3 white-text center">
+                        <i class="material-icons">email</i>
+                        <h5>Contact us for booking</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat itaque doloribus pariatur cum magnam quisquam veniam molestias, corporis similique assumenda!</p>
+                    </div>
+                    <ul class="collection with-header">
+                        <li class="collection-header">
+                            <h4>Location</h4>
+                        </li>
+                        <li class="collection-item">AL DOLLAR FZE</li>
+                        <li class="collection-item">P.O.Box: 4404</li>
+                        <li class="collection-item">United Arab Emirates (U.A.E.)</li>
+                    </ul>
+                </div>
+                <div class="col s12 m6">
+                    <div class="card-panel grey lighten-3">
+                        <h5>Please fill out this fourm</h5>
+                        <div class="input-field">
+                            <input type="text" placeholder="Name">
+                        </div>
+                        <div class="input-field">
+                            <input type="text" placeholder="Email">
+                        </div>
+                        <div class="input-field">
+                            <input type="text" placeholder="Phone">
+                        </div>
+                        <div class="input-field">
+                            <textarea class="materialize-textarea" placeholder="Enter Message"></textarea>
+                        </div>
+                        <input type="submit" value="Submit" class="btn blue-grey darken-3">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer class="section blue-grey darken-3 white-text center">
+        <p class="flow-text"> + 971 5​2 810 2124 @ : aldollar07@gmail.com / aldollar@rakfzbc.ae Skype : aldollarfze</p>
+    </footer>
+
+
+
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script>
+        //Sidenav
+        const sideNav = document.querySelector('.sidenav');
+        M.Sidenav.init(sideNav, {});
+        //Slider
+        const slider = document.querySelector('.slider');
+        M.Slider.init(slider, {
+            indicators: false,
+            height: 500,
+            transition: 500,
+            interval: 6000
+        });
+        //Autocomplete
+        const ac = document.querySelector('.autocomplete');
+        M.Autocomplete.init(ac, {
+            data: {
+                "Engineering": null,
+                "Graphic Design": null,
+                "Art": null,
+                "Web Development": null,
+                "Interior Design": null,
+                "Agriculture": null,
+                "Aquaphonic": null,
+            }
+        });
+        //Material Boxs image gallery
+        const mb = document.querySelectorAll('.materialboxed');
+        M.Materialbox.init(mb, {});
+        // Scrollspy
+        const ss = document.querySelectorAll('.scrollspy');
+        M.ScrollSpy.init(ss, {});
+    </script>
+</body>
+
+</html>
